# media-moment

labs/lab_1/: open_cv_task2.py  open_cv_task3.py  open_cv_task4.py  open_cv_task5.py  open_cv_task6.py  open_cv_task7.py  open_cv_task9.py
labs/lab_1/report/: REPORT.md
labs/lab_1/theory/: THEORY.md  THEORY_PREPARE.md
labs/lab_2/: helper.py  justfile  pyproject.toml  tracking_task3.py  tracking_task4.py  tracking_task5.py
labs/lab_2/report/: REPORT.md
labs/lab_2/theory/: THEORY.md
labs/lab_3/: gauss_task1.py  gauss_task4.py  gauss_task5.py  gauss_task_custom.py  justfile
labs/lab_3/golang_implementation/: main.go
labs/lab_3/report/: REPORT.md
labs/lab_3/utils/: conv_matrix.py  gauss.py  gauss_blur.py  normalize_matrix.py
labs/lab_4/: justfile  kani_algorythm_task_1.py  kani_algorytm.py
labs/lab_4/cpp/: README.md
labs/lab_4/report/: REPORT.md
labs/lab_5/: MotionDetect.py  justfile
labs/lab_6/: cnn.py  cnn_evaluate.py  justfile  mlp.py  mlp_evaluate.py  pyproject.toml
labs/lab_6/report/: REPORT.md
labs/lab_7/: execute_classic_easyocr.py  execute_classic_easyocr_processed.py  execute_classic_pytesseract.py  execute_custom_eng_processed_pytesseract_processed.py  execute_custom_eng_pytesseract.py  execute_custom_eng_pytesseract_processed.py  execute_custom_eng_pytesseract_with_augmentation.py  execute_custom_eng_pytesseract_with_augmentation_processed.py  execute_custom_pytesseract.py  execute_tesseract_with_augmentation.py  execute_tesseract_with_post_processing.py  model_executor.py  pyproject.toml
labs/lab_8/: pyproject.toml
(+33 files in other folders)
