[tool.poetry]
name = "media_lab_2"
version = "1.0.0"
description = ""
authors = ["mister.alex49@yandex.ru"]
package-mode= false

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
keras = "^3.7.0"
tensorflow = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
